--- a/style.css
+++ b/style.css
@@ -1523,7 +1523,6 @@ body {
 .for::-webkit-inner-spin-button {
     display: none;
 }
-/* НЕ НУЖНО ДЛЯ МОДАЛКИ */
 .for, .for2 {
     display: block;
     margin-top: 20px;
@@ -1555,7 +1554,8 @@ body {
     }
 
 .regis {
-    margin-left: 190px;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 150px;
     font-size: 20px;
 }
