--- a/style.css
+++ b/style.css
@@ -1206,7 +1206,7 @@ body {
 }
 
 .queshead2 {
-    margin-top:5px;
+    margin-top: 5px;
     padding-left: 50px;
     margin-right: auto;
     text-align: justify;
@@ -1214,11 +1214,13 @@ body {
     font-weight: 600;
     line-height: 58px;
     width: 920px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .answ {
     padding-top: 20px;
-    padding-left: 50px;
+    /*padding-left: 50px;*/
     margin-right: auto;
     text-align: justify;
     font-size: 16px;
@@ -1255,11 +1257,13 @@ body {
 }
 
 .faq1rect {
-    margin-top: 35px;
+    /*margin-top: 5px;*/
     background-color: #f5f7fa;
     width: 965px;
     height: 250px;
     margin-bottom: 5px;
+    display: flex;
+    flex-direction: column;
 }
 
 .faqrect {
@@ -1268,7 +1272,6 @@ body {
     width: 965px;
     height: 60px;
     margin-bottom: 5px;
-    display: flex;
 }
 
 .trusted_icons {
@@ -1320,12 +1323,14 @@ body {
     }
 
 .plus {
-    margin-top: 10px;
+    /*margin-top: 10px;*/
+    margin: auto 0;
     font-size: 25px;
     font-weight: 600;
     /* position: absolute; */
     text-align: right;
-    margin-right: 30px;
+    /*margin-right: 30px;*/
+    display: block;
 }
 
     .plus:hover {
